      ► Non-critical foragable items (eg modules) get a smaller boost. These non-essential items now drop as cube root of (tech multiplier)
    - Spidertron remnant gun turret chance: 40%=>50%. Just in case, I also slightly bumped it up for everyone.
---------------------------------------------------------------------------------------------------
Version: 0.69.113
Date: 2025-09-06
  Changes:
    - Wind turbines are now implemented as solar panels, following a critical update from Wube in factorio 2.0.66. Expect lower UPS cost (about 0.1-0.25 ms per 1 GW of power).
      ► WARNING: If you used no surface restriction mods to place turbines off of Rubia, they will not produce as much power anymore.
    - Wind turbines can now finally be repaired by hand.
    - Compatibility with Multiple Unit Train Control.
    - Robo frame biomanufacturing tech icon now looks less terrible.
    - Spanish locale added. Thanks to AnthonyDPS.
    - Fixed bug that caused version change warnings to appear incorrectly. Sorry for making you think there were more breaking changes than actual -.-
---------------------------------------------------------------------------------------------------
Version: 0.69.112
Date: 2025-09-03
  Changes:
    - Yellow science made by biochambers +33% yield. This makes the disparity even bigger, and it's even more preferable to use the biochamber for yellow sci.
    - Tuned the lube biorecycling recipe to make it more favorable for yellow science. This is an overall buff.
      ► Cost: Junkbacter 2=>3, Ferric scrap 1=>2, Time 5=>7s
      ► Yield: Battery 2=>3, Low density structure 1=>2, Lubricant 10=>8.
    - Fixed bplib interface collision.
    - Minor typo fixes.
    - Robotics icon is currently WIP. I'm rushing out a change to fix a crashing compat bug from by a recent Cerys update. This will be fixed later.
---------------------------------------------------------------------------------------------------
Version: 0.69.111
Date: 2025-09-01
  Changes: