@@ -383,7 +383,7 @@ require-rubia-for-endgame-planets=If set ON, then beating Rubia is necessary to 
 rubia-difficulty-setting=Magnifies trashsteroid health, damage dealt by trashsteroids, and the amount of damage sustained upon Rubia planet entry. Resources and crafting are not affected. Default = Normal.\n[img=utility/warning_icon]WARNING: "Pyanodons" requires Fulgoran technology (not explicitly required by the tech tree) to even land on Rubia.\n[img=utility/warning_icon]WARNING: "Engineer Must Die" additionally requires [quality=epic] quality equipment to land on Rubia.
 rubia-rocketizer-early-unlock=Unlock the rocketizer alongside rocket silos (as though Rubia was not installed). This setting is for backwards compatibility with save files that installed "Rocket Cargo Insertion" prior to downloading Rubia. Please do not enable unless this applies to you. Default OFF.
 invert-trashsteroid-scaling=Flip trashsteroid scaling to become smaller as they make impact (instead of larger). Purely visual. Default OFF.
-rubia-megabase-mode=Makes several things on Rubia lighter on UPS, but removes some mechanics and graphical improvements. This setting does nothing prior to beating Rubia, and does alter the difficulty. Default OFF.
+rubia-megabase-mode=If turned on, it makes trashsteroids consume less UPS by making them immobile, but ONLY if very many trashsteroids are spawned. This alters mechanics. Default OFF.
 rubia-tech-cost-multiplier=Technologies for Rubia's trigger technologies are immune to standard tech cost multiplier settings. This setting multiplies the cost for these technologies. Bigger number = bigger cost. Default = 1.
 
 [string-mod-setting]
@@ -520,7 +520,7 @@ rubia-craptonite-wall-tips=Rubia __ENTITY__craptonite-wall__
 
 [tips-and-tricks-item-description]
 rubia-briefing=[img=utility/warning_icon][img=utility/warning_icon][color=250,250,0][font=default-semibold]WARNING![/font][/color][img=utility/warning_icon][img=utility/warning_icon]  Passengers in cargo pods will suffer SEVERE impact damage upon entering Rubian airspace. Safely landing on Rubia requires you to be able to withstand a large amount of impact damage, or else [color=250,250,0][font=default-semibold]YOU WILL DIE UPON LANDING[/font][/color]. The prerequisites of [technology=planet-discovery-rubia] allow crafting everything needed to land. After beating Rubia, [technology=planetslib-rubia-cargo-drops] enables free travel without the requisite gear.\n\n[planet=rubia] is a trash planet with constant hurricane-force winds. The wind restricts the orientation of several entities, and will constantly barrage the surface with trashsteroids. The planet is covered in resource-rich scrap, which can be converted to useful materials using microbes in a [entity=biorecycling-plant]. Heavy amounts of atmospheric debris prevent rockets from safely launching without [technology=rubia-project-trashdragon], and block cargo pods from sending supplies without [technology=planetslib-rubia-cargo-drops].
-rubia-trashsteroid-tips=Trashsteroids are ever-present threats on Rubia:\n   • [entity=medium-trashsteroid] will bombard your base, and require turrets to defend against.\n   • Falling trashsteroids deal damage with a small chance to land a critical hit, which is rolled once per trashsteroid.\n   • [entity=cargo-pod] will suffer SEVERE impact damage upon entry, without [technology=planetslib-rubia-cargo-drops].\n   • [entity=rocket-silo] cannot safely launch rockets without [technology=rubia-project-trashdragon].\n   • [entity=garbo-grabber] can only collect [item=craptonite-chunk] from trashsteroids destroyed by physical/explosive damage within their range.\n   • Some entities are immune to bombardment, such as [item=rail], [entity=rail-signal], [entity=rubia-armored-locomotive], related entities, and any entity made with [item=craptonite-frame].\n   • [entity=craptonite-wall] block the movement of trashsteroids, but cannot spawn-block them. The walls are immune to their impact, but other entities caught in the AOE still take damage as normal.\n   • [technology=physical-projectile-damage-1]/[technology=weapon-shooting-speed-1]/etc will make [entity=medium-trashsteroid] bulkier. Higher tech levels still give you a substantial advantage--just not as massive of an advantage as you would expect.\n   • Rubia mod difficulty settings scale trashsteroid health and damage dealt.\n\n[font=default-semibold]Megabasing/UPS Tips:[/font]\n   • Not looking at Rubia will greatly lower Rubia's UPS cost, as a large fraction of time is spent on rendering trashsteroids.\n   • Trashsteroids only spawn in chunks containing something vulnerable to them OR chunks within player vision.\n   • Do not fear exploring large swaths of Rubia's surface. I spent weeks optimizing trashsteroids to avoid spending CPU time on unnecessary chunks of the map.
+rubia-trashsteroid-tips=Trashsteroids are ever-present threats on Rubia:\n   • [entity=medium-trashsteroid] will bombard your base, and require turrets to defend against.\n   • Falling trashsteroids deal damage with a small chance to land a critical hit, which is rolled once per trashsteroid.\n   • [entity=cargo-pod] will suffer SEVERE impact damage upon entry, without [technology=planetslib-rubia-cargo-drops].\n   • [entity=rocket-silo] cannot safely launch rockets without [technology=rubia-project-trashdragon].\n   • [entity=garbo-grabber] can only collect [item=craptonite-chunk] from trashsteroids destroyed by physical/explosive damage within their range.\n   • Some entities are immune to bombardment, such as [item=rail], [entity=rail-signal], [entity=rubia-armored-locomotive], related entities, and any entity made with [item=craptonite-frame].\n   • [entity=craptonite-wall] block the movement of trashsteroids, but cannot spawn-block them. The walls are immune to their impact, but other entities caught in the AOE still take damage as normal.\n   • [technology=physical-projectile-damage-1]/[technology=weapon-shooting-speed-1]/etc will make [entity=medium-trashsteroid] bulkier. Higher tech levels still give you a substantial advantage--just not as massive of an advantage as you would expect.\n   • Rubia mod difficulty settings scale trashsteroid health and damage dealt.\n\n[font=default-semibold]Megabasing/UPS Tips:[/font]\n   • Not looking at Rubia will greatly lower Rubia's UPS cost, as a large fraction of time is spent on rendering trashsteroids.\n   • Trashsteroids only spawn in chunks containing something vulnerable to them OR chunks within player vision.\n   • Do not fear exploring large swaths of Rubia's surface. I spent weeks optimizing trashsteroids to avoid spending CPU time on unnecessary chunks of the map.\n   • Dead trashsteroids cost no UPS.\n   • Mod settings for "Map > Rubia > Megabase Mode" reduces UPS costs for very large bases, but immobilizes trashsteroids.
 rubia-wind-tips=Eastward winds will have the following effects:\n   • [entity=inserter] and [entity=splitter] can only move items to the right.\n   • [entity=transport-belt], [entity=underground-belt], and [entity=electric-mining-drill] cannot move items to the left.\n   • [entity=logistic-robot] cannot safely navigate to [entity=requester-chest], [entity=buffer-chest], [entity=active-provider-chest], or [entity=rocket-silo].\n   • [entity=locomotive], [entity=cargo-wagon], [entity=recycler], and related cannot withstand the wind.\n   • [entity=rubia-wind-turbine] will generate power.\n\n-----------\nFull list of entitites banned on Rubia: 
 rubia-crapapult-tips=[entity=crapapult] can destroy [color=250,250,0][font=default-semibold]almost any item[/font][/color] by shooting it out into Rubia's winds.\nMany technologies are researched by shooting a large number of a specific item. The crapapult is NOT a military building.
 rubia-garbo-grabber-tips=Using physical/explosive ammunition to destroy a [entity=medium-trashsteroid] within range of a [entity=garbo-grabber] allows it to collect [item=craptonite-chunk].
